--- a/Seen/Seen/Views/Home/Index.cshtml
+++ b/Seen/Seen/Views/Home/Index.cshtml
@@ -1,2 +1,59 @@
-﻿H M M M
-B L A N K A
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <style>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 150px;
+            width: 50%;
+        }
+
+        button {
+            background-color: #c9c9c9; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 100px;
+            padding-right: 10%;
+            padding-left: 10%;
+            text-decoration: none;
+        }
+
+            button:hover {
+                background-color: #dc82a4;
+                color: white;
+            }
+
+        footer {
+            position: absolute;
+            bottom: 0;
+            color: slategrey;
+            display: block;
+            align-content: center;
+            align-items: center;
+            width: 100%;
+            height: 40px;
+            text-align: center;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+    </style>
+    <title>s e e n</title>
+</head>
+<body>
+    <a href="">
+        <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
+    </a>
+    <button type="button" onclick="location.href='/add'">HAVE SEEN</button>
+    <button type="button" onclick="location.href='/sightings'">BEEN SEEN?</button>
+    <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
+</body>
+</html>
