--- a/Seen/Seen/Views/Home/Index.cshtml
+++ b/Seen/Seen/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         }
 
         button {
-            background-color: #c9c9c9; /* Green */
+            background-color: #c9c9c9;
             border: none;
             color: white;
             padding: 15px 32px;
