--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>fedex</title>
+    <title>s e e n</title>
     <style>
 
         /* Always set the map height explicitly to define the size of the div
