--- a/Seen/Seen/Views/Home/Index.cshtml
+++ b/Seen/Seen/Views/Home/Index.cshtml
@@ -35,6 +35,7 @@
 
         footer {
             position: absolute;
+            letter-spacing: 8px;
             bottom: 0;
             color: slategrey;
             display: block;
