--- a/Seen/Seen/Views/Home/Sightings.cshtml
+++ b/Seen/Seen/Views/Home/Sightings.cshtml
@@ -3,17 +3,61 @@
 <head>
     <style>
         #map {
-            height: 400px; 
-            width: 100%; 
+            height: 400px;
+            width: 100%;
         }
     </style>
 </head>
 <body>
     <h3>My Google Maps Demo</h3>
-    <!--The div element for the map -->
     <div id="map"></div>
+    <div id="form">
+        @for (int i = 0; i < Model.Count; i++)
+        {
+        <table>
+            <tr>
+                <td>Date:</td>
+                <td>
+                    <p>@Model[i].Day</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Hairstyle:</td>
+                <td>
+                    <p>@Model[i].HairStyle</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Hair Color</td>
+                <td>@Model[i].HairColor</td>
+            </tr>
+            <tr>
+                <td>Gender:</td>
+                <td>
+                    @Model[i].Gender
+                </td>
+            </tr>
+            <tr>
+                <td>Glasses:</td>
+                <td>
+                    @if (@Model[i].Glasses == true)
+                    {
+                        <p>Yes</p>
+                    }
+                    else
+                    {
+                        <p>No</p>
+
+                    }
+                </td>
+            </tr>
+        </table>
+        }
+    </div>
     <script>
+
         function initMap() {
+            var infowindow = new google.maps.InfoWindow();
             var map = new google.maps.Map(
                 document.getElementById('map'), { zoom: 4, center: { lat: 0, lng: 0 } });
             @foreach (var item in Model)
@@ -23,7 +67,19 @@
             var marker = new google.maps.Marker({ position: location, map: map });
             </text>
             }
-        }
+            infowindow = new google.maps.InfoWindow({
+                content: document.getElementById('form')
+            });
+            google.maps.event.addListener(marker, 'click', function () {
+                infowindow.open(map, marker);
+            });
+            google.maps.event.addListener(marker, 'click', (function (marker, content, infowindow) {
+                return function () {
+                    infowindow.setContent(content);
+                    infowindow.open(map, marker);
+                };
+            })(marker, content, infowindow));  
+            }
     </script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap">
