--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -7,7 +7,7 @@
     <style>
     #map {
         height: 50%;
-        width: 50%;
+        width: 60%;
         margin: auto;
         border-radius: 5%;
         border: 5px solid;
@@ -28,7 +28,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 150px;
+        margin-top: 50px;
         width: 50%;
         }
 
@@ -126,7 +126,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="submit">Juj!</button>
+            <button type="submit"></button>
         </form>
     </div>
     <div id="message">Location saved</div>
@@ -203,5 +203,6 @@ function downloadUrl(url, callback) {
 }</script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap"></script>
+    <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
 </body>
 </html>
