--- a/Seen/Seen/Views/Home/Index.cshtml
+++ b/Seen/Seen/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             width: 100%;
             height: 40px;
             text-align: center;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             }
         </style>
     <title>s e e n</title>
