--- a/Seen/Seen/Views/Home/Sightings.cshtml
+++ b/Seen/Seen/Views/Home/Sightings.cshtml
@@ -3,55 +3,97 @@
 <head>
     <style>
         #map {
-            height: 400px;
+            height: 50%;
+            width: 60%;
+            margin: auto;
+            border-radius: 5%;
+            border: 5px solid;
+            border-color: #DC82A4;
+            padding: 10px;
+            opacity: 0.75;
+            margin-top: 100px;
+            margin-bottom: 100px;
+        }
+
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            width: 50%;
+        }
+
+        footer {
+            position: absolute;
+            letter-spacing: 8px;
+            margin-top: 40px;
+            color: slategrey;
+            display: block;
+            align-content: center;
+            align-items: center;
             width: 100%;
+            height: 40px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        #form {
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
 <body>
-    <h3>My Google Maps Demo</h3>
+    <a href="/">
+        <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
+    </a>
     <div id="map"></div>
     <div id="form">
         @for (int i = 0; i < Model.Count; i++)
         {
-        <table>
-            <tr>
-                <td>Date:</td>
-                <td>
-                    <p>@Model[i].Day</p>
-                </td>
-            </tr>
-            <tr>
-                <td>Hairstyle:</td>
-                <td>
-                    <p>@Model[i].HairStyle</p>
-                </td>
-            </tr>
-            <tr>
-                <td>Hair Color</td>
-                <td>@Model[i].HairColor</td>
-            </tr>
-            <tr>
-                <td>Gender:</td>
-                <td>
-                    @Model[i].Gender
-                </td>
-            </tr>
-            <tr>
-                <td>Glasses:</td>
-                <td>
-                    @if (@Model[i].Glasses == true)
-                    {
-                        <p>Yes</p>
-                    }
-                    else
-                    {
-                        <p>No</p>
+            <table>
+                <tr>
+                    <td>Date:</td>
+                    <td>
+                        <p>@Model[i].Day</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Hairstyle:</td>
+                    <td>
+                        <p>@Model[i].HairStyle</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Hair Color</td>
+                    <td>@Model[i].HairColor</td>
+                </tr>
+                <tr>
+                    <td>Gender:</td>
+                    <td>
+                        @Model[i].Gender
+                    </td>
+                </tr>
+                <tr>
+                    <td>Glasses:</td>
+                    <td>
+                        @if (@Model[i].Glasses == true)
+                        {
+                            <p>Yes</p>
+                        }
+                        else
+                        {
+                            <p>No</p>
 
-                    }
-                </td>
-            </tr>
-        </table>
+                        }
+                    </td>
+                </tr>
+            </table>
         }
     </div>
     <script>
@@ -76,7 +118,7 @@
             }
     </script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap">
-    </script>
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap"></script>
+    <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
 </body>
 </html>
