add new js to sightings page

--- a/Seen/Seen/Views/Home/Sightings.cshtml
+++ b/Seen/Seen/Views/Home/Sightings.cshtml
@@ -3,13 +3,55 @@
 <head>
     <style>
         #map {
-            height: 400px;
+            height: 50%;
+            width: 60%;
+            margin: auto;
+            border-radius: 5%;
+            border: 5px solid;
+            border-color: #DC82A4;
+            padding: 10px;
+            opacity: 0.75;
+            margin-top: 100px;
+            margin-bottom: 100px;
+        }
+
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            width: 50%;
+        }
+
+        footer {
+            position: absolute;
+            letter-spacing: 8px;
+            margin-top: 40px;
+            color: slategrey;
+            display: block;
+            align-content: center;
+            align-items: center;
             width: 100%;
+            height: 40px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        #form {
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
 <body>
-    <h3>My Google Maps Demo</h3>
+    <a href="/">
+        <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
+    </a>
     <div id="map"></div>
     <div id="form">
         @for (int i = 0; i < Model.Count; i++)
@@ -54,26 +96,44 @@
         </table>
         }
     </div>
-    <script>
-
-        function initMap() {
+    <script type="text/javascript">
+        window.onload = function () {
+            var locations = [
+                
+                    @for (int i = 0; i < Model.Count; i++)
+                    {
+                        <text>
+                [
+                        "@Model[i].Latitude",
+                    "@Model[i].Longitude"
+                ],
+                        </text>
+                    }
+                
+            ];
+            gmarkers = [];
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 12,
+                center: new google.maps.LatLng(47.507589, 19.066128),
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            });
             var infowindow = new google.maps.InfoWindow();
-            var map = new google.maps.Map(
-                document.getElementById('map'), { zoom: 4, center: { lat: 0, lng: 0 } });
-            @foreach (var item in Model)
-            {
-            <text>
-            var location = { lat: @item.Latitude, lng: @item.Longitude };
-            var marker = new google.maps.Marker({ position: location, map: map });
-            </text>
+            function createMarker(latlng, html) {
+                var marker = new google.maps.Marker({
+                    position: latlng,
+                    map: map
+                });
+                google.maps.event.addListener(marker, 'click', function () {
+                    infowindow.setContent(html);
+                    infowindow.open(map, marker);
+                });
+                return marker;
             }
-            infowindow = new google.maps.InfoWindow({
-                content: document.getElementById('form')
-            });
-            google.maps.event.addListener(marker, 'click', function () {
-                infowindow.open(map, marker);
-            });
+            for (var i = 0; i < locations.length; i++) {
+                gmarkers[locations[i][0]] =
+                    createMarker(new google.maps.LatLng(locations[i][0], locations[i][1]));
             }
+        }
     </script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap">
