hozzájadtam az infot

--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -126,7 +126,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="submit"></button>
+            <button type="submit">Juj!</button>
         </form>
     </div>
     <div id="message">Location saved</div>
