--- a/Seen/Seen/Views/Home/Sightings.cshtml
+++ b/Seen/Seen/Views/Home/Sightings.cshtml
@@ -104,34 +104,38 @@
                     {
                         <text>
                 [
-                        "@Model[i].Latitude",
-                    "@Model[i].Longitude"
+                    "@Model[i].Latitude",
+                    "@Model[i].Longitude",
+                    "@Model[i].HairColor",
+                    "@Model[i].HairStyle"
+                    "@Model[i].Gender"
+                    "@Model[i].Glasses"
+
                 ],
                         </text>
                     }
                 
             ];
-            gmarkers = [];
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 12,
                 center: new google.maps.LatLng(47.507589, 19.066128),
                 mapTypeId: google.maps.MapTypeId.ROADMAP
             });
             var infowindow = new google.maps.InfoWindow();
-            function createMarker(latlng, html) {
+            function createMarker(latlng, haircolor, hairstyle) {
                 var marker = new google.maps.Marker({
                     position: latlng,
                     map: map
                 });
                 google.maps.event.addListener(marker, 'click', function () {
-                    infowindow.setContent(html);
+                    var content = `${haircolor} <br> ${hairstyle}`;
+                    infowindow.setContent(content);
                     infowindow.open(map, marker);
                 });
                 return marker;
             }
             for (var i = 0; i < locations.length; i++) {
-                gmarkers[locations[i][0]] =
-                    createMarker(new google.maps.LatLng(locations[i][0], locations[i][1]));
+                createMarker(new google.maps.LatLng(locations[i][0], locations[i][1]), locations[i][2], locations[i][3]);
             }
         }
     </script>
