--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -129,7 +129,6 @@
             <button type="submit">Juj!</button>
         </form>
     </div>
-    <div id="message">Location saved</div>
 
     <script>var map;
 var marker;
@@ -145,10 +144,6 @@ function initMap() {
 
             infowindow = new google.maps.InfoWindow({
                 content: document.getElementById('form')
-            });
-
-            messagewindow = new google.maps.InfoWindow({
-                content: document.getElementById('message')
             });
 
             google.maps.event.addListener(map, 'click', function(event) {
@@ -169,38 +164,7 @@ function initMap() {
             });
 }
 
-function saveData() {
-            var name = escape(document.getElementById('name').value);
-            var address = escape(document.getElementById('address').value);
-            var type = document.getElementById('type').value;
-            var latlng = marker.getPosition();
-            var url = 'phpsqlinfo_addrow.php?name=' + name + '&address=' + address +
-                '&type=' + type + '&lat=' + latlng.lat() + '&lng=' + latlng.lng();
-
-            downloadUrl(url, function(data, responseCode) {
-
-                if (responseCode == 200 && data.length <= 1) {
-                    infowindow.close();
-                    messagewindow.open(map, marker);
-                }
-            });
-}
-
-function downloadUrl(url, callback) {
-            var request = window.ActiveXObject ?
-                new ActiveXObject('Microsoft.XMLHTTP') :
-                new XMLHttpRequest;
-
-            request.onreadystatechange = function() {
-                if (request.readyState == 4) {
-                    request.onreadystatechange = doNothing;
-                    callback(request.responseText, request.status);
-                }
-            };
-
-            request.open('GET', url, true);
-            request.send(null);
-}</script>
+</script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap"></script>
     <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
