everything is working so far (git status)

--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Seen.Models.Answers
 <!DOCTYPE html>
+<html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -126,7 +127,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="submit">Juj!</button>
+            <button type="submit">SUBMIT</button>
         </form>
     </div>
 
