--- a/Seen/Seen/Views/Home/ItsAMatch.cshtml
+++ b/Seen/Seen/Views/Home/ItsAMatch.cshtml
@@ -16,6 +16,47 @@
             display:block;
             margin-right: auto;
             margin-left: auto;
+            text-align:center;
+        }
+
+        h4 {
+            letter-spacing: 8px;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 70%;
+            font-size: 4em;
+            display: block;
+            margin-right: auto;
+            margin-left: auto;
+            text-align: center;
+            color: #5B89C7;
+        }
+
+        h5 {
+            letter-spacing: 8px;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 70%;
+            font-size: 2em;
+            display: block;
+            margin-right: auto;
+            margin-left: auto;
+            text-align: center;
+            color: #DC82A4;
+
+        }
+
+        footer {
+            position: absolute;
+            letter-spacing: 8px;
+            margin-top: 40px;
+            color: slategrey;
+            display: block;
+            align-content: center;
+            align-items: center;
+            width: 100%;
+            bottom: 0;
+            height: 40px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
     <title>s e e n</title>
@@ -24,6 +65,9 @@
     <a href="/">
         <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
     </a>
-        <h3>Congratulations, you have found the mysterious stranger!</h3>
+    <h3>Congratulations, you have found the mysterious stranger!</h3>
+    <h5>their social media handle is</h5>
+    <h4>@Model.SocialHandle</h4>
+    <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
 </body>
 </html>
