--- a/Seen/Seen/Views/Home/Sightings.cshtml
+++ b/Seen/Seen/Views/Home/Sightings.cshtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>s e e n</title>
     <style>
         #map {
             height: 50%;
@@ -12,7 +13,7 @@
             padding: 10px;
             opacity: 0.75;
             margin-top: 100px;
-            margin-bottom: 100px;
+            margin-bottom: 40px;
         }
 
         html, body {
@@ -101,5 +102,7 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeryQUReAomPDiBe6toux-gRCazvnZHnQ&callback=initMap">
     </script>
+    <footer>2018 - Blanka Eszter Hoóz & Máté Dugas</footer>
+
 </body>
 </html>
