add style to info window

--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -137,9 +137,9 @@ var infowindow;
 var messagewindow;
 
 function initMap() {
-            var california = { lat: 47.507589, lng: 19.066128 };
+            var greenfox = { lat: 47.507589, lng: 19.066128 };
             map = new google.maps.Map(document.getElementById('map'), {
-                center: california,
+                center: greenfox,
                 zoom: 13
             });
 
