--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -127,6 +127,12 @@
                         </select>
                     </td>
                 </tr>
+                <tr>
+                    <td>Message</td>
+                    <td>
+                         <textarea name='Message' rows="2" cols="40" placeholder="Write a message!"></textarea>
+                    </td>
+                </tr>
             </table>
             <button type="submit">SUBMIT</button>
         </form>
