add more styling

--- a/Seen/Seen/Views/Home/ItsAMatch.cshtml
+++ b/Seen/Seen/Views/Home/ItsAMatch.cshtml
@@ -7,6 +7,7 @@
             margin-right: auto;
             margin-top: 50px;
             width: 50%;
+            min-width: 400px;
         }
         h3{
             letter-spacing: 8px;
@@ -47,16 +48,16 @@
         footer {
             position: absolute;
             letter-spacing: 8px;
-            margin-top: 40px;
+            bottom: 0;
             color: slategrey;
             display: block;
             align-content: center;
             align-items: center;
             width: 100%;
-            bottom: 0;
             height: 40px;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
+            min-width: 500px;
         }
     </style>
     <title>s e e n</title>
