--- a/Seen/Seen/Views/Home/Add.cshtml
+++ b/Seen/Seen/Views/Home/Add.cshtml
@@ -16,21 +16,21 @@
         padding: 10px;
         opacity: 0.75;
         margin-top: 100px;
-        margin-bottom:100px;
         }
 
-    html, body {
+     html, body {
         height: 100%;
         margin: 0;
         padding: 0;
         }
-     
-    img {
+
+     #logo {
         display: block;
         margin-left: auto;
         margin-right: auto;
         margin-top: 50px;
         width: 50%;
+        min-width: 400px;
         }
 
      footer {
@@ -49,13 +49,17 @@
      #form {
         font-family:Arial, Helvetica, sans-serif;
         display: none;
-       }
+        }
+     
+     input, textarea, select{
+         width: 12em;
+        }
           
     </style>
 </head>
 <body>
     <a href="/">
-        <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
+        <img id="logo" src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
     </a>
 
     <div id="map" height="460px" width="100%"></div>
@@ -130,7 +134,7 @@
                 <tr>
                     <td>Message</td>
                     <td>
-                         <textarea name='Message' rows="2" cols="40" placeholder="Write a message!"></textarea>
+                         <textarea name='Message' rows="4" placeholder="Write a message!"></textarea>
                     </td>
                 </tr>
             </table>
