--- a/Seen/Seen/Views/Home/Index.cshtml
+++ b/Seen/Seen/Views/Home/Index.cshtml
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <style>
-        img {
+        #logo {
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 150px;
+            margin-top: 100px;
             width: 50%;
+            margin-bottom: 150px;
+            min-width:400px;
             }
 
         button {
@@ -18,14 +20,19 @@
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 18px;
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 100px;
+            margin-top: 70px;
             padding-right: 10%;
             padding-left: 10%;
             text-decoration: none;
+            width: 40%;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            letter-spacing: 0.5em;
+            min-width: 400px;
             }
 
         button:hover {
@@ -45,13 +52,14 @@
             height: 40px;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
+            min-width: 500px;
             }
         </style>
     <title>s e e n</title>
 </head>
 <body>
     <a href="">
-        <img src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
+        <img id="logo" src="https://i.imgur.com/3kGnqYa.png" alt="s e e n">
     </a>
     <button type="button" onclick="location.href='/add'">HAVE SEEN</button>
     <button type="button" onclick="location.href='/sightings'">BEEN SEEN?</button>
